# xclaw

./: .gitignore  run_ui.py
OpenClaw/: HEARTBEAT.md  SOUL.md
bitrix24-skill/: .env.example  .gitignore  CHANGELOG.md  README.md  ruff.toml
bitrix24-skill/.github/workflows/: ci.yml
bitrix24-skill/tests/: test_bitrix24_client.py  test_catalogs.py  test_chains.py  test_cli.py  test_enrich_catalogs.py  test_extract_api_metadata.py  test_integration_smoke.py  test_offline_sync_worker.py  test_skill_metadata.py  test_verify_catalogs.py
bitrix24-skill/tools/: README.md  api_metadata.json  enrich_catalogs.py  extract_api_metadata.py  gen_method_risk.py  gen_required_params.py  skill_eval.md  token_report.py  verify_catalogs.py
gateway/: .gitignore  docker-compose.yml  index_projects.py  list_projects.py  main.py  main_claude.py  openclaw_worker.py  populate_twin.py  pyproject.toml  sync_structure.py
