[project]
name = "gateway"
version = "0.1.0"
package-mode = false
description = ""
authors = [
    {name = "developer"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "requests (>=2.34.2,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "redis (>=8.0.0,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
